--- a/definitions.tex
+++ b/definitions.tex
@@ -116,4 +116,18 @@ Every via definition must have two minimum enclosure rules, one for every layer,
 	\label{fig:technology_rule_via_dimensions}
 \end{figure}
 
-Last but not least there are several minimum notch rule definitions available in the technology definition of AMS. They are mostly used for the internal layout design of for example a transistor. During the routing they are unimportant, as a route never has a notch. Therefore I won't describe this type of technology rule in detail here. 
+Last but not least there are several minimum notch rule definitions available in the technology definition of AMS. They are mostly used for the internal layout design of for example a transistor. During the routing they are unimportant, as a route never has a notch. Therefore I won't describe this type of technology rule in detail here.
+
+\section{Electrical Rules}
+In the tech-file from the manufacturer there are also electrical rules contained. These rules describe the exact electrical behaviour and can be used for example for the simulation. In the routing algorithms later described I will use these values to optimize the behaviour of the circuit layout, therefore I want to describe how they can be interpreted.
+
+The first important value is the sheet resistance. This value describes the resistance of a layer and I used it to calculate the resistance of the routes. I don't need a really exact resistance, only something to measure and compare which takes into account the different layers. Therefore my personal definition for this algorithm of the sheet resistance will possibly be not the right one, but it is useful in this case. For routes on one layer I just multiply the sheet resistance value with the length of the route, as I use always the minimum width. A via doesn't really have a length, so I multiply the value in this case with the area. Afterwards are these two results summed up for a whole connection and represents then the resistance of this connection.
+
+The other two used values are the edge- and areacapacitance. The edgecapacitance describes the capacity between two neighbour routes on the same layer, the areacapacitance the capacity between two routes on the same position but on different layers. The edgecapacity is calculated as product from the length which the routes share as neighbours with the edgecapacitance and the areacapacity as product from the length which routes share as neighbours with the areacapacitance.
+
+All in all the here used definitions are for sure not the right ones, but the results are multiplied with adjustable weights afterwards anyway. Therefore the exact values are not a matter of interest, the results are only used as rough estimations and measurement.
+
+
+
+
+
