--- a/custom.bib
+++ b/custom.bib
@@ -1,9 +1,9 @@
-@manual{_MUNE09,
-title = {{{WiCkeD}}},
-year = 2009,
+@manual{ROUTING_ANALOG_CIRCUITS,
+title = {{{Routing Analog Circuits}}},
+year = 2011,
 url = {www.muneda.com},
 organization = {MunEDA},
 howpublished = {www.muneda.com},
 sourceofpub = {others},
-PubId = {24943}
+PubId = {978-1-4419-6931-6}
 }
