--- a/thesis.tex
+++ b/thesis.tex
@@ -37,8 +37,8 @@
 \begin{document}
 \authors{Benedikt Schmidt}
 \title{Implementation of Routing in Plantage}
-\issueDate{01}{01}{2099}
-\submissionDate{31}{06}{2099}
+\issueDate{00}{05}{2013}
+\submissionDate{00}{10}{2013}
 \supervisor{M.Sc. Pang-Yen Chou}{PD Dr.-Ing. Helmut Gräb}
 \address{
     Mitterweg 63 \newline
@@ -60,7 +60,7 @@
 
 \listoffigures
 \listoftables
-\bibliographystyle{tumbib}
-\bibliography{thesis,custom}
+\bibliographystyle{plain}
+\bibliography{custom}
 
 \end{document}
