added springer book about analog layout synthesis to bibliography

--- a/custom.bib
+++ b/custom.bib
@@ -1,9 +1,6 @@
-@manual{ROUTING_ANALOG_CIRCUITS,
-title = {{{Routing Analog Circuits}}},
-year = 2011,
-url = {www.muneda.com},
-organization = {MunEDA},
-howpublished = {www.muneda.com},
-sourceofpub = {others},
-PubId = {978-1-4419-6931-6}
+@BOOK{springer:eda_analog_routing,
+	AUTHOR		= "{{Florin Balasa}} and Mark Po-Hung Lin and Yao-Wen Chang and Martin Strasser and Michael Eick and Helmut Graeb and Ulf Schlichtmann and Günhan Dündar and Ahmet Unutulmaz and Hazem Said and Mohamed Dessouky and Reem El-Adawi and Hazem Abbas and Hussein Shahein and Rafael Castro-Lopez and Elisenda Roca and Francisco V. Fernandez and Göran Jerke and Jens Lienig and Jan B. Freuer",
+	TITLE		= "Analog Layout Synthesis",
+	PUBLISHER	= "Springer US",
+	YEAR		= "2011"
 }
