--- a/routing.tex
+++ b/routing.tex
@@ -44,7 +44,7 @@ The GUI-part of this application also needed some adaptions. This work was mainl
 \end{itemize}	
 
 \section{Overview of Existing Routing Algorithms}
-A really nice overview of the existing routing algorithms and the different approaches can be found in \cite{ROUTING_ANALOG_CIRCUITS}, page 149 till 201.
+A really nice overview of the existing routing algorithms and the different approaches can be found in \cite[page 149 till 201]{springer:eda_analog_routing}.
 
 \section{Implemented Routing Algorithms}
 During this thesis two different routing algorithms were implemented: First of all a typical line expansion router. This solutions doesn't consider all constraints, but it is able to create at least reasonable results. Afterwards this algorithm was extended to consider additional constraints.
