--- a/routing.tex
+++ b/routing.tex
@@ -44,10 +44,26 @@ The GUI-part of this application also needed some adaptions. This work was mainl
 \end{itemize}	
 
 \section{Overview of Existing Routing Algorithms}
-A really nice overview of the existing routing algorithms and the different approaches can be found in \cite[page 149 till 201]{springer:eda_analog_routing}.
+A really nice overview of the existing routing algorithms and the different approaches can be found in \cite[page 149 till 201]{springer:eda_analog_routing}. The more sophisticated routing algorithms described there are based on several basic algorithms:
+\begin{itemize}
+\item Maze Router
+\item Line Router
+\item Channel Router
+\end{itemize}
+To find out which type of algorithm may be appropiate in my case I will take a short look on the most important algorithms.
+
+\subsection{Basic Routing Algorithms}
+\subsubsection{Maze Router}
+
+\subsubsection{Line Router}
+
+\subsection{Steiner Routing}
+
+\subsection{Sophisticated Routing Algorithms}
+
 
 \section{Implemented Routing Algorithms}
-During this thesis two different routing algorithms were implemented: First of all a typical line expansion router. This solutions doesn't consider all constraints, but it is able to create at least reasonable results. Afterwards this algorithm was extended to consider additional constraints.
+During this thesis I implemented three different routing algorithms: First of all a typical line expansion router. This solutions doesn't consider all constraints, but it is able to create at least reasonable results. Afterwards this algorithm was extended to consider additional constraints. To improve the performance I also implemented a very special version of the line expansion router which really only creates feasible, but not very useful routings. This is router can be used for the pre-routing, where the results is thrown away afterwards.
 
 \subsection{Line Expansion Router}
 
