described maze and line router

--- a/custom.bib
+++ b/custom.bib
@@ -4,3 +4,10 @@
 	url = {Springer, ISBN: 978-1-4419-6931-6},
 	author = {Balasa and Lin and Chang and Strasser and Eick and Graeb and Schlichtmann and Dündar and Unutulmaz and Said and Dessouky and El-Adawi and Abbas and Shahein and Castro-Lopez and Roca and Fernandez and Jerke and Lienig and Freuer},
 }
+
+@manual{kaufmann:electronic_design_automation,
+	title = {{{Electronic Design Automation}}},
+	year = {2009},
+	url = {Kaufmann, ISBN: 978-0-12-374364-0},
+	author = {Wang and Chang and Cheng},
+}
