described decision which algorithm I've implemented

--- a/routing.tex
+++ b/routing.tex
@@ -89,9 +89,7 @@ It could be a very good idea to try to integrate the routing into the placer. Po
 Template based algorithms start not from scratch, they already have a possible layout for a slightly different circuit or technology. Such a solution can be used in several cases and gives the layout designer nearly the full control over the process. But in my case I have to assume that there is no such template available and the intention of the whole set of tools would be, that the user has to provide as less information as possible. This would really mean \textit{electronic design \textbf{automation}} and should be the real target.
 
 \section{Implemented Routing Algorithms}
-MISSING: WHY LINE EXPANSION
-
-During this thesis I implemented three different routing algorithms: First of all a typical line expansion router. This solutions doesn't consider all constraints, but it is able to create at least reasonable results. Afterwards this algorithm was extended to consider additional constraints. To improve the performance I also implemented a very special version of the line expansion router which really only creates feasible, but not very useful routings. This is router can be used for the pre-routing, where the results is thrown away afterwards.
+The first decision to made was which algorithms should I implement. The more sophisticated solutions, or all global and detailed approaches seemed a bit to complex to implement them clean in only a few weeks. So the real choice was to implement something based on a maze or a line router. As the line routers seemed to be a good trade-off between complexity and performance I implemented something based on them. In the end I've implemented three different routing algorithms: First of all a typical line expansion router. This solutions doesn't consider all constraints, but it is able to create at least reasonable results. Afterwards this algorithm was extended to consider additional constraints. To improve the performance I also implemented a very special version of the line expansion router which really only creates feasible, but not very useful routings. This is router can be used for the pre-routing, where the results is thrown away afterwards.
 
 \subsection{Line Expansion Router}
 
