added placeholder for missing picture

--- a/routing.tex
+++ b/routing.tex
@@ -197,3 +197,5 @@ The selection of the routes after the creations makes use of the parasitics. The
 The actual selection of the route is quite easy: After the creation step I have a whole bunch of possible routings, where I calculate the parasitic sum
 \[p = w_R \cdot R + w_C \cdot C\]
 (where $w_R$ is the weight for the resistance, $w_C$ the weight for the capacity, $R$ the total resistance and $C$ the total capacity) for every routing. The best one in this term is then the one with the smallest parasitic sum.
+
+PICTURE MISSING OF ROUTED MILLER AMPLIFIER (LAYOUT)
