cited Strasser's work

--- a/custom.bib
+++ b/custom.bib
@@ -11,3 +11,10 @@
 	url = {Kaufmann, ISBN: 978-0-12-374364-0},
 	author = {Wang and Chang and Cheng},
 }
+
+@manual{iccad:plantage,
+	title = {{{Deterministic analog circuit placement using hierarchically bounded enumeration and enhanced shape functions}}},
+	year = {2008},
+	url = {ICCAD, DOI: 10.1145/1509456.1509530},
+	author = {Strasser and Eick and Gräb and Schlichtmann and M. Johannes},
+}
